correction collapse-logement ok, projet soumis à validation 4

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -323,10 +323,54 @@ body {
     color: #E3E3E3;
 }
 
-.logement-collapses {
+.collapse {
+    width: 100%;
+
+    &-header {
+        width: 100%;
+        background: #ff6060;
+        color: white;
+        border: none;
+        padding: 10px 20px;
+        border-radius: 10px;
+        cursor: pointer;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        font-weight: bold;
+        text-align: left;
+
+        i {
+            font-size: 20px;
+        }
+    }
+
+    &-content {
+        background-color: #f6f6f6;
+        padding: 20px;
+        border-radius: 0 0 10px 10px;
+        color: black;
+        line-height: 1.5;
+
+        p,
+        ul {
+            margin: 0;
+            /* Reset des marges par défaut */
+        }
+
+        ul {
+            padding-left: 20px;
+            /* Indentation des listes */
+        }
+    }
+}
+
+.collapse-logement {
     display: flex;
-    gap: 76px;
+    flex-direction: row;
+    gap: 20px;
     margin-top: 24px;
+    width: 100%;
 }
 
 .collapse-description,
@@ -335,28 +379,6 @@ body {
     flex-shrink: 0;
 }
 
-.collapse-header-description,
-.collapse-header-equipments {
-    background-color: #ff6060;
-    color: white;
-    padding: 10px 20px;
-    border-radius: 10px;
-    cursor: pointer;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    font-weight: bold;
-}
-
-.collapse-content-description,
-.collapse-content-equipments {
-    background-color: #f6f6f6;
-    padding: 20px;
-    border-radius: 0 0 10px 10px;
-    margin-top: -5px;
-    max-height: 200px;
-    overflow-y: auto;
-}
 
 .error-container {
     display: flex;
@@ -397,38 +419,6 @@ body {
     flex-direction: column;
     gap: 20px;
     align-items: center;
-}
-
-.collapse {
-    background-color: #ff6060;
-    border-radius: 5px;
-    overflow: hidden;
-    width: 1023px;
-}
-
-.collapse-header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 15px;
-    cursor: pointer;
-    font-size: 18px;
-    font-weight: bold;
-    color: white;
-}
-
-.collapse-title {
-    flex-grow: 1;
-}
-
-.collapse-header i {
-    font-size: 20px;
-}
-
-.collapse-content {
-    background: #f6f6f6;
-    padding: 15px;
-    color: black;
 }
 
 @media (max-width: 1024px) {
@@ -547,7 +537,7 @@ body {
         gap: 100px;
     }
 
-    .logement-collapses {
+    .collapse-logement {
         flex-direction: column;
         gap: 20px;
     }
